--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <h3>Last Message Delivered...!</h3>
         <p class="message"></p>
     </div>
+    
+    <script src="index.js"></script>
+    
 </body>
 </html>
